--- a/EventManager/src/Gui/view/EventCreator.fxml
+++ b/EventManager/src/Gui/view/EventCreator.fxml
@@ -41,7 +41,7 @@
                               <Label layoutX="71.0" layoutY="26.0" text="Ticket name:" />
                               <TextField fx:id="ticketNameTxt" layoutX="31.0" layoutY="44.0" />
                               <Label layoutX="79.0" layoutY="83.0" text="Extra Fee:" />
-                              <TextField layoutX="30.0" layoutY="101.0" />
+                              <TextField fx:id="extraFeeTxt" layoutX="30.0" layoutY="101.0" />
                               <Label layoutX="58.0" layoutY="141.0" text="Ticket description:" />
                               <TextArea fx:id="ticketDescInputTxt" layoutX="6.0" layoutY="159.0" prefHeight="61.0" prefWidth="200.0" promptText="Input ticket description here" />
                               <Button fx:id="buttonAddTicket" layoutX="52.0" layoutY="234.0" mnemonicParsing="false" onAction="#buttonAddTicketPress" text="Add" />
