--- a/EventManager/src/Gui/view/AdminPage.fxml
+++ b/EventManager/src/Gui/view/AdminPage.fxml
@@ -5,17 +5,20 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="Pane" prefHeight="400.0" prefWidth="600.0" stylesheets="@../CSS/Adminpage.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.Controller.AdminPageController">
+<AnchorPane fx:id="Pane" prefHeight="400.0" prefWidth="600.0" stylesheets="@../CSS/Adminpage.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.Controller.AdminPageController">
    <children>
       <Button fx:id="adduserBTN" layoutX="15.0" layoutY="353.0" mnemonicParsing="false" onAction="#addBTNPress" text="Add User" />
-      <Button fx:id="editBTN" layoutX="94.0" layoutY="353.0" mnemonicParsing="false" onAction="#editBTNPress" text="Edit User" />
-      <TableView fx:id="adminTable" layoutX="17.0" layoutY="14.0" prefHeight="322.0" prefWidth="568.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
+      <Button fx:id="editBTN" layoutX="109.0" layoutY="353.0" mnemonicParsing="false" onAction="#editBTNPress" text="Edit User" />
+      <TableView fx:id="adminTable" layoutX="15.0" layoutY="14.0" prefHeight="322.0" prefWidth="558.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="14.0">
         <columns>
-          <TableColumn fx:id="usernameColumn" prefWidth="156.0" text="Username" />
-          <TableColumn fx:id="emailColumn" prefWidth="313.0" text="Email" />
-            <TableColumn fx:id="typeColumn" prefWidth="100.0" text="Type" />
+          <TableColumn fx:id="usernameColumn" editable="false" prefWidth="156.0" text="Username" />
+          <TableColumn fx:id="emailColumn" editable="false" prefWidth="313.0" text="Email" />
+            <TableColumn fx:id="typeColumn" editable="false" prefWidth="193.0" text="Type" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <Button fx:id="delBTN" layoutX="171.0" layoutY="353.0" mnemonicParsing="false" onAction="#delBTNPress" text="Delete User" />
+      <Button fx:id="delBTN" layoutX="202.0" layoutY="353.0" mnemonicParsing="false" onAction="#delBTNPress" text="Delete User" />
    </children>
 </AnchorPane>
