--- a/EventManager/src/Gui/view/UserCreationView.fxml
+++ b/EventManager/src/Gui/view/UserCreationView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="344.0" prefWidth="355.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.Controller.UserCreationController">
+<AnchorPane fx:id="anchaorpane" prefHeight="344.0" prefWidth="355.0" stylesheets="@../CSS/UserCreation.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Gui.Controller.UserCreationController">
    <children>
       <Label fx:id="errorLabel" layoutX="155.0" layoutY="14.0" prefHeight="18.0" prefWidth="51.0" />
       <Label layoutX="75.0" layoutY="23.0" text="Create new user">
@@ -21,7 +21,7 @@
       <TextField fx:id="password2ndTxt" layoutX="108.0" layoutY="179.0" promptText="Repeat password" />
       <Label fx:id="userCheckBoxLabel" layoutX="135.0" layoutY="214.0" text="Choose user type" />
       <ChoiceBox fx:id="userCheckBox" layoutX="106.0" layoutY="232.0" prefWidth="150.0" />
-      <Button layoutX="68.0" layoutY="276.0" mnemonicParsing="false" onAction="#onAddUserBTNPress" text="Create user" />
-      <Button layoutX="230.0" layoutY="276.0" mnemonicParsing="false" onAction="#onCancelBTNPress" text="Cancel" />
+      <Button layoutX="68.0" layoutY="276.0" mnemonicParsing="false" onAction="#onAddUserBTNPress" styleClass="Button" stylesheets="@../CSS/UserCreation.css" text="Create user" />
+      <Button layoutX="230.0" layoutY="276.0" mnemonicParsing="false" onAction="#onCancelBTNPress" styleClass="Button" text="Cancel" />
    </children>
 </AnchorPane>
