--- a/EventManager/src/Gui/view/EventManagerPage.fxml
+++ b/EventManager/src/Gui/view/EventManagerPage.fxml
@@ -40,5 +40,7 @@
          </font>
       </Label>
       <Button layoutX="725.0" layoutY="444.0" mnemonicParsing="false" onAction="#assignParticipantsBTNPress" styleClass="Button" text="Create Ticket" />
+      <Button layoutX="725.0" layoutY="444.0" mnemonicParsing="false" styleClass="Button" text="Create Ticket" />
+      <Button fx:id="logoutButton" layoutX="544.0" layoutY="526.0" mnemonicParsing="false" onAction="#logoutBTN" text="Log out" />
    </children>
 </AnchorPane>
