--- a/EventManager/src/Gui/view/ParticipantAssign.fxml
+++ b/EventManager/src/Gui/view/ParticipantAssign.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -91,7 +92,7 @@
                   </AnchorPane>
                   <AnchorPane prefHeight="40.0" prefWidth="200.0">
                      <children>
-                        <Button layoutX="14.0" layoutY="13.0" mnemonicParsing="false" onAction="#sendBTNPress" text="Send mail" />
+                        <Button layoutX="14.0" layoutY="13.0" mnemonicParsing="false" onAction="#sendBTNPress" text="Send ticket" />
                      </children>
                   </AnchorPane>
                   <BorderPane prefHeight="20.0" prefWidth="200.0" />
@@ -100,13 +101,17 @@
             <AnchorPane prefHeight="200.0" prefWidth="20.0" />
          </children>
       </HBox>
-      <Pane fx:id="ticketPane" layoutX="110.0" layoutY="410.0" prefHeight="160.0" prefWidth="340.0">
+      <Pane fx:id="ticketPane" layoutX="130.0" layoutY="412.0" prefHeight="161.0" prefWidth="297.0">
          <children>
-            <Label fx:id="firstNameLabel" layoutX="24.0" layoutY="21.0" text="First Name" />
-            <Label fx:id="lastNameLabel" layoutX="39.0" layoutY="50.0" text="Last Name" />
-            <Label fx:id="eventNameLabel" layoutX="156.0" layoutY="21.0" text="event" />
-            <Label fx:id="ticketTypeLabel" layoutX="146.0" layoutY="73.0" text="tickettype" />
-            <Label fx:id="emailLabel" layoutX="39.0" layoutY="96.0" text="email" />
+            <ImageView fx:id="imageView" fitHeight="161.0" fitWidth="297.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="firstNameLabel" layoutX="24.0" layoutY="30.0" />
+            <Label fx:id="lastNameLabel" layoutX="24.0" layoutY="72.0" />
+            <Label fx:id="eventNameLabel" layoutX="187.0" layoutY="30.0" />
+            <Label fx:id="emailLabel" layoutX="37.0" layoutY="114.0" />
+            <Label layoutX="24.0" layoutY="13.0" text="First Name" />
+            <Label layoutX="25.0" layoutY="55.0" text="Last Name" />
+            <Label layoutX="38.0" layoutY="97.0" text="Email" />
+            <Label layoutX="187.0" layoutY="13.0" text="Event Name" />
          </children>
       </Pane>
    </children>
